@@ -1,5 +1,8 @@
 1.2.16 (unreleased)
 
+- Set backup directory correctly when building multiple Plones. Fixes #103.
+  [smcmahon]
+
 - Update source for wv for CentOS7.
   [smcmahon]
 
